RESOLVED FIXED126254
[EFL][WK2] MiniBrowser scale up/down infinitely after r161087
https://bugs.webkit.org/show_bug.cgi?id=126254
Summary [EFL][WK2] MiniBrowser scale up/down infinitely after r161087
Ryuan Choi
Reported 2013-12-26 22:34:27 PST
After r161087, contentScaleFactor of WebView is synced with pageScaleFactor of WebPage. It means that WKViewGetContentScaleFactor might not be same with PageViewportController's current scale value until received PageScaleFactorDidChange.
Attachments
Patch (1.99 KB, patch)
2013-12-26 22:39 PST, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2013-12-26 22:39:58 PST
Gyuyoung Kim
Comment 2 2013-12-26 22:46:20 PST
Comment on attachment 220048 [details] Patch LGTM
WebKit Commit Bot
Comment 3 2013-12-27 00:40:51 PST
Comment on attachment 220048 [details] Patch Clearing flags on attachment: 220048 Committed r161100: <http://trac.webkit.org/changeset/161100>
WebKit Commit Bot
Comment 4 2013-12-27 00:40:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.