[EFL][WK2] MiniBrowser scale up/down infinitely after r161087 https://bugs.webkit.org/show_bug.cgi?id=126254

Reviewed by Gyuyoung Kim.

After r161087, contentScaleFactor of WebView is synced with pageScaleFactor
of WebPage. It means that WKViewGetContentScaleFactor might not be same
with PageViewportController's current scale value until received PageScaleFactorDidChange.

* UIProcess/efl/PageViewportControllerClientEfl.cpp:
(WebKit::PageViewportControllerClientEfl::setViewportPosition):
Use controller's current scale just to update and sync the position.


Canonical link: https://commits.webkit.org/144191@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161100 268f45cc-cd09-0410-ab3c-d52691b4dbfc